# extractnet

./: .gitignore  Makefile  Pipfile  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  the_journey.rst
src/extractnet/: __init__.py  blocks.pyx  compat.py  lcs.pyx  pipeline.py  util.py
src/extractnet/features/: _kohlschuetter.pyx  _readability.pyx  _weninger.pyx
test/: test_extractor.py  test_integration.py  test_kohlschuetter.py
